tests/syntax_tests/data/parsing/errors/other/record_rest_duplicate.res
let {...Config.t as first, ...Config.t as second} = myRecord
